--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-layout": "^1.3.13",
     "gatsby-plugin-manifest": "^2.4.33",
+    "gatsby-plugin-mdx": "^1.2.46",
     "gatsby-plugin-offline": "^3.2.30",
     "gatsby-plugin-react-helmet": "^3.3.12",
     "gatsby-plugin-sharp": "^2.6.38",
     "gatsby-plugin-styled-components": "^3.3.13",
     "gatsby-source-filesystem": "^2.3.32",
     "gatsby-transformer-sharp": "^2.5.16",
+    "gsap": "^3.5.1",
     "hard-source-webpack-plugin": "^0.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
